# docs-mcp-server

./: .env.template  .gitignore  IMPLEMENTATION.md  MCP_COMPLIANCE.md  PERFORMANCE_FIXES.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  USAGE.md  comprehensive_test_output.txt  debug_test.py  docker-compose.yml  main.py  pyproject.toml  search_engine.py  server.py  start-services.sh  stop-services.sh  test_server.sh  test_tools_direct.py
docs/django-6.0/: README.md  contents.md  glossary.md  index.md
docs/django-6.0/faq/: admin.md  contributing.md  general.md  help.md  index.md  install.md  models.md  troubleshooting.md  usage.md
docs/django-6.0/howto/: auth-remote-user.md  csp.md  csrf.md  custom-file-storage.md  custom-lookups.md  custom-management-commands.md  custom-model-fields.md  custom-shell.md  custom-template-backend.md  custom-template-tags.md  delete-app.md  error-reporting.md  index.md  initial-data.md  legacy-databases.md  logging.md  outputting-csv.md  outputting-pdf.md  overriding-templates.md  upgrade-version.md  windows.md  writing-migrations.md
docs/django-6.0/internals/: deprecation.md  git.md  howto-release-django.md  index.md  mailing-lists.md  organization.md  release-process.md  security.md
docs/django-6.0/intro/: contributing.md  index.md  install.md  overview.md  reusable-apps.md  tutorial01.md  tutorial02.md  tutorial03.md  tutorial04.md  tutorial05.md  tutorial06.md  tutorial07.md  tutorial08.md  whatsnext.md
docs/django-6.0/misc/: api-stability.md  design-philosophies.md  distributions.md  index.md
docs/django-6.0/ref/: applications.md  checks.md  csp.md  (+22 more)
docs/drf-3.16.1/: index.md
docs/psycopg-3.3.1/: README.md  index.md  news.md  news_pool.md  release.md
reference/: README.md
scripts/: README.md  build_index.py  check_stats.sh  test_setup.py  watch_docs.py
tests/: README.md  TESTING_GUIDE.md  TEST_DOCUMENTATION.md  analyze_quality.py  benchmark_search.py  comprehensive_test_results.json  run_comprehensive_tests.py  run_tests.py  score_accuracy_results.json  smoke_test.py  test_cases.yaml  test_integration.py  test_mcp_accuracy.py  test_query_expansion.py  test_score_accuracy.py  test_search_engine.py  test_semantic_scores.py  test_variable_topk.py
(+642 files in other folders)
