[project]
name = "docs-mcp-server"
version = "0.1.0"
description = "Hybrid search MCP server for Django/DRF/Psycopg documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=0.5.23",
    "fastapi>=0.115.0",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.23.1",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.1",
    "sentence-transformers>=3.3.1",
    "uvicorn>=0.34.0",
    "whoosh>=2.7.4",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=0.5.23",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.23.1",
    "pydantic>=2.10.0",
    "sentence-transformers>=3.3.1",
    "uvicorn>=0.34.0",
    "whoosh>=2.7.4",
]
