[project]
name = "docs-mcp-server"
version = "0.1.0"
description = "Hybrid search MCP server for Django/DRF/Psycopg documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "elasticsearch>=8.11.0",
    "fastembed>=0.2.0",
    "fastapi>=0.115.0",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.23.1",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.1",
    "qdrant-client>=1.7.0",
    "semantic-text-splitter>=0.18.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
    "psutil>=7.1.3",
    "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "elasticsearch>=8.11.0",
    "fastembed>=0.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.23.1",
    "pydantic>=2.10.0",
    "qdrant-client>=1.7.0",
    "semantic-text-splitter>=0.18.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
    "pytest>=9.0.2",
]
